Fixed bug on landing pages input form where was un-usable on mobile. added media query

--- a/src/components/styles/LandingPage.css
+++ b/src/components/styles/LandingPage.css
@@ -1,20 +1,24 @@
-
-
 .inputButtons {
-    text-align: center;
-    margin-top: .5em;
-    margin-bottom: 3em;
-    display: flex;
-    justify-content: space-evenly;
+  text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 3em;
+  display: flex;
+  justify-content: space-evenly;
+}
+@media screen and (max-width: 750px) {
+  #altInputForm {
+    width: 180px;
+    height: 45px;
+    font-size: 18px;
+  }
 }
 
-
 h2 {
-    margin-top: 2em;
-    text-align: center;
+  margin-top: 2em;
+  text-align: center;
 }
 
 .footerMain {
-    text-align: center;
-    font-size: 14px;
+  text-align: center;
+  font-size: 14px;
 }
